feat: ajout de ProductService et intégration du scan de code-barres avec Expo Camera
- Refactorisation de l'architecture avec un service  pour gérer les produits
- Implémentation du scan de code-barres avec  pour une saisie automatique

--- a/warehouse/app.json
+++ b/warehouse/app.json
@@ -33,7 +33,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-font"
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan barcodes."
+        }
+      ],
+      "expo-font",
+      "expo-barcode-scanner"
     ],
     "experiments": {
       "typedRoutes": true
