--- a/warehouse/package.json
+++ b/warehouse/package.json
@@ -47,7 +47,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-camera": "~16.0.16"
+    "expo-camera": "~16.0.16",
+    "expo-print": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
